Menu design integration

--- a/src/styleUtils/app-colors.scss
+++ b/src/styleUtils/app-colors.scss
@@ -1,4 +1,12 @@
-$green: #4FB340;
-$orange: #FF9966;
-$pink: #FF5E62;
-$orangeGradian: linear-gradient(to bottom, $orange, $pink);
+$green: #2ECC71;
+$orange: #E67E22;
+$yellow: #F1C40F;
+$blue: #3498DB;
+$cyan: #1ABC9C;
+$purple: #9B59B6;
+$red: #FF5E62;
+
+$lightText: rgba(white, 0.75);
+$cardBackground: rgba(black, 0.3);
+
+$backgroundGradian: linear-gradient(to bottom, #685F8E, #103B62);
