--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -1,11 +1,24 @@
 @import "fonts";
 @import "app-colors";
 
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  margin: 0;
   font-family: 'open-sans';
+  color: white;
+  font-size: 14px;
+  background: $backgroundGradian;
 }
 
 .container {
-  display: flex;
-  align-items: top;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
 }
