Create details container

--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -22,3 +22,13 @@ body {
   left: 0;
   overflow: hidden;
 }
+
+.detailsContainer {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  bottom: 25px;
+  left: 345px;
+  display: flex;
+  justify-content: center;
+}
