--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -2,8 +2,11 @@
 @import 'mixins';
 
 .container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
   width: 320px;
-  height: 100%;
   padding: 25px;
   box-sizing: border-box;
   overflow: auto;
