--- a/src/pages/DocDetails/style.scss
+++ b/src/pages/DocDetails/style.scss
@@ -1,4 +1,5 @@
 @import 'app-colors';
+@import 'mixins';
 
 .container {
   width: 640px;
@@ -6,4 +7,21 @@
   background-color: $cardBackground;
   border-radius: 5px;
   overflow: auto;
+}
+
+.title {
+  @include uppercase;
+  font-size: 18px;
+}
+
+.description {
+  margin-bottom: 15px;
+}
+
+.separator {
+  margin: 20px 0;
+  border: 0;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(white, 0.25);
 }
