--- a/src/pages/DocDetails/components/OperationPath/style.scss
+++ b/src/pages/DocDetails/components/OperationPath/style.scss
@@ -1,12 +1,39 @@
+$cardColor: #474263;
+
 .container {
-  margin: 15px 0;
+  position: sticky;
+  top: 0px;
+  padding: 15px 0;
   font-size: 16px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: -20px;
+    left: 0;
+    background: linear-gradient(to bottom, rgba($cardColor, 1) 50%, rgba($cardColor, 0) 100%);
+    opacity: 0;
+    transition: 300ms;
+  }
 
   &:first-child {
     margin-top: 0;
   }
 }
 
+.container_withBackground {
+  &::before {
+    opacity: 1;
+  }
+}
+
 .method {
+  position: relative;
   margin-right: 15px;
+}
+
+.path {
+  position: relative;
 }
