--- a/src/pages/DocDetails/components/OperationPath/style.scss
+++ b/src/pages/DocDetails/components/OperationPath/style.scss
@@ -3,7 +3,7 @@ $cardColor: #474263;
 .container {
   position: sticky;
   top: 0px;
-  padding: 15px 0;
+  padding: 15px;
   font-size: 16px;
 
   &::before {
