--- a/src/pages/DocDetails/style.scss
+++ b/src/pages/DocDetails/style.scss
@@ -1,10 +1,11 @@
 @import 'app-colors';
 @import 'mixins';
 
+$padding: 15px;
+
 .container {
   position: relative;
   width: 640px;
-  padding: 15px;
   background-color: $cardBackground;
   border-radius: 5px;
   overflow: auto;
@@ -12,7 +13,12 @@
 
 .title {
   @include uppercase;
+  padding: $padding $padding 0 $padding;
   font-size: 18px;
+}
+
+.content {
+  padding: 0 $padding $padding $padding;
 }
 
 .description {
