--- a/src/pages/DocDetails/components/OperationPath/style.scss
+++ b/src/pages/DocDetails/components/OperationPath/style.scss
@@ -3,30 +3,10 @@ $cardColor: #44425f;
 .container {
   position: sticky;
   top: 0px;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
   font-size: 16px;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: -20px;
-    right: 0;
-    bottom: -20px;
-    left: 0;
-    background: linear-gradient(to bottom, rgba($cardColor, 1) 60%, rgba($cardColor, 0) 100%);
-    opacity: 0;
-    transition: 200ms;
-  }
-
-  &:first-child {
-    margin-top: 0;
-  }
-}
-
-.container_withBackground {
-  &::before {
-    opacity: 1;
-  }
+  background: linear-gradient(to bottom, rgba($cardColor, 1) 60%, rgba($cardColor, 0) 100%);
+  border-radius: 5px 5px 0 0;
 }
 
 .method {
