--- a/src/pages/SelectDoc/style.scss
+++ b/src/pages/SelectDoc/style.scss
@@ -22,9 +22,19 @@
 
 .optionTitle {
   @include uppercase;
-  margin: 0;
+  margin: 0 0 15px 0;
   text-align: center;
   font-size: 16px;
   font-weight: normal;
   color: $lightText;
+}
+
+.urlOptionContainer {
+  display: flex;
+  align-items: center;
+}
+
+.inputContainer {
+  flex: 1;
+  margin-right: 10px;
 }
