Check if url is valid

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -8,4 +8,9 @@
   color: white;
   background-color: $blue;
   border-radius: 3px;
+  transition: 200ms;
+}
+
+.button_disabled {
+  opacity: 0.5;
 }
