--- a/src/App/style.scss
+++ b/src/App/style.scss
@@ -11,7 +11,6 @@ body {
   font-family: 'open-sans';
   color: white;
   font-size: 14px;
-  background: $backgroundGradian;
 }
 
 .container {
@@ -21,6 +20,21 @@ body {
   bottom: 0;
   left: 0;
   overflow: hidden;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: $backgroundGradian;
+  opacity: 0;
+  transition: 1000ms;
+}
+
+.background_enabled {
+  opacity: 1;
 }
 
 .detailsContainer {
