Fix header of operation details

--- a/src/pages/DocDetails/style.scss
+++ b/src/pages/DocDetails/style.scss
@@ -12,7 +12,7 @@ $padding: 15px;
 }
 
 .summary {
-  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .content {
@@ -20,7 +20,7 @@ $padding: 15px;
 }
 
 .description {
-  margin: 15px 0;
+  margin-bottom: 15px;
 }
 
 .separator {
