--- a/src/pages/DocDetails/components/OperationPath/style.scss
+++ b/src/pages/DocDetails/components/OperationPath/style.scss
@@ -3,7 +3,7 @@ $cardColor: #44425f;
 .container {
   position: sticky;
   top: 0px;
-  padding: 15px 15px 0 15px;
+  padding: 15px;
   font-size: 16px;
   background: linear-gradient(to bottom, rgba($cardColor, 1) 60%, rgba($cardColor, 0) 100%);
   border-radius: 5px 5px 0 0;
