--- a/src/pages/DocDetails/components/ResponsesDoc/style.scss
+++ b/src/pages/DocDetails/components/ResponsesDoc/style.scss
@@ -7,14 +7,19 @@
 }
 
 .container {
-  display: flex;
+
 }
 
 .codeList {
-
+  display: inline-block;
+  vertical-align: top;
+  width: 40px;
 }
 
 .responseDetails {
-  flex: 1;
+  display: inline-block;
+  vertical-align: top;
+  width: calc(100% - 40px);
   padding-left: 20px;
+  box-sizing: border-box;
 }
