Display body schema in responses

--- a/src/components/BodySchema/style.scss
+++ b/src/components/BodySchema/style.scss
@@ -5,3 +5,22 @@
   border: 1px solid rgba(white, 0.25);
   border-radius: 3px;
 }
+
+.row {
+  display: flex;
+  padding: 10px;
+  color: $lightText;
+  &:nth-child(even) {
+    background-color: rgba(black, 0.08);
+  }
+}
+
+.cell_label {
+  @include ellipsis;
+  flex: 1;
+}
+
+.cell_type {
+  width: 80px;
+  padding: 0 10px;
+}
