--- a/src/pages/SelectDoc/style.scss
+++ b/src/pages/SelectDoc/style.scss
@@ -126,9 +126,9 @@
   text-align: center;
 }
 
-.tactillIcon {
-  width: 100px;
-  height: 26px;
+.peachIcon {
+  width: 86px;
+  height: 86px;
 }
 
 .giphyIcon {
