--- a/src/pages/DocDetails/components/OperationPath/style.scss
+++ b/src/pages/DocDetails/components/OperationPath/style.scss
@@ -1,8 +1,12 @@
 $cardColor: #44425f;
 
 .container {
-  position: sticky;
+  z-index: 10;
+  position: absolute;
   top: 0px;
+  left: 0;
+  width: 100%;
+  box-sizing: border-box;
   padding: 15px;
   font-size: 16px;
   background: linear-gradient(to bottom, rgba($cardColor, 1) 60%, rgba($cardColor, 0) 100%);
