--- a/src/pages/SelectDoc/components/DocExemple/style.scss
+++ b/src/pages/SelectDoc/components/DocExemple/style.scss
@@ -2,10 +2,16 @@
 
 .container {
   @include resetButton;
+  position: relative;
   width: 120px;
   height: 120px;
   margin: 0 40px;
   vertical-align: top;
   background-color: rgba(white, 0.08);
   border-radius: 5px;
+}
+
+.imageContainer {
+  width: 100%;
+  height: 100%;
 }
