--- a/src/pages/SelectDoc/components/DocExemple/style.scss
+++ b/src/pages/SelectDoc/components/DocExemple/style.scss
@@ -5,7 +5,7 @@
   position: relative;
   width: 120px;
   height: 120px;
-  margin: 0 40px;
+  margin: 0 30px 30px 30px;
   vertical-align: top;
   background-color: rgba(white, 0.08);
   border-radius: 5px;
