--- a/src/pages/SelectDoc/style.scss
+++ b/src/pages/SelectDoc/style.scss
@@ -15,7 +15,7 @@
 .card {
   width: 640px;
   max-height: calc(100% - 30px);
-  padding: 30px;
+  padding: 30px 30px 0 30px;
   box-sizing: border-box;
   background-color: $cardBackground;
   border-radius: 5px;
@@ -124,6 +124,11 @@
 
 .examplesContainer {
   text-align: center;
+}
+
+.tactillIcon {
+  width: 86px;
+  height: 26px;
 }
 
 .peachIcon {
