--- a/src/pages/Documentation/components/Details/style.scss
+++ b/src/pages/Documentation/components/Details/style.scss
@@ -1,5 +1,6 @@
 @import 'app-colors';
 @import 'mixins';
+@import 'responsive';
 
 $padding: 15px;
 
@@ -8,6 +9,12 @@ $padding: 15px;
   width: 640px;
   background-color: $cardBackground;
   border-radius: 5px;
+
+  @include tablet {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
 }
 
 .summary {
@@ -38,4 +45,25 @@ $padding: 15px;
 
 .requestBodyContainer {
   margin-bottom: 40px;
+}
+
+.backButton {
+  @include resetButton;
+  @include uppercase;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+  height: 40px;
+  padding: 0 15px;
+  display: flex;
+  align-items: center;
+  color: white;
+  background-color: rgba(white, 0.07);
+  border-radius: 3px;
+}
+
+.backButtonIcon {
+  width: 23px;
+  height: 19px;
+  margin-right: 10px;
 }
