--- a/src/pages/Documentation/components/CodeTab/style.scss
+++ b/src/pages/Documentation/components/CodeTab/style.scss
@@ -1,5 +1,6 @@
 @import "app-colors";
 @import "mixins";
+@import "responsive";
 
 .container {
   @include resetButton;
@@ -8,6 +9,16 @@
   color: white;
   opacity: 0.4;
   transition: 200ms;
+
+  @include phone {
+    display: inline-block;
+    margin-bottom: 0;
+    padding: 5px 10px 10px 10px;
+
+    &:first-child {
+      padding-left: 0;
+    }
+  }
 }
 
 .container_selected {
