--- a/src/pages/Documentation/components/ResponsesDoc/style.scss
+++ b/src/pages/Documentation/components/ResponsesDoc/style.scss
@@ -1,4 +1,5 @@
 @import 'mixins';
+@import 'responsive';
 
 .title {
   @include uppercase;
@@ -6,14 +7,16 @@
   font-size: 16px;
 }
 
-.container {
-
-}
-
 .codeList {
   display: inline-block;
   vertical-align: top;
   width: 40px;
+
+  @include phone {
+    display: block;
+    width: 100%;
+    margin-bottom: 5px;
+  }
 }
 
 .responseDetails {
@@ -22,4 +25,10 @@
   width: calc(100% - 40px);
   padding-left: 20px;
   box-sizing: border-box;
+
+  @include phone {
+    display: block;
+    width: 100%;
+    padding-left: 0;
+  }
 }
