--- a/src/components/BodySchema/style.scss
+++ b/src/components/BodySchema/style.scss
@@ -1,5 +1,6 @@
 @import "app-colors";
 @import "mixins";
+@import "responsive";
 
 .container {
   border: 1px solid rgba(white, 0.25);
@@ -13,6 +14,11 @@
   &:nth-child(even) {
     background-color: rgba(black, 0.08);
   }
+
+  @include phone {
+    padding: 5px 10px;
+    flex-direction: column;
+  }
 }
 
 .cell_label {
@@ -23,4 +29,9 @@
 .cell_type {
   width: 80px;
   padding: 0 10px;
+
+  @include phone {
+    padding: 0;
+    font-size: 12px;
+  }
 }
