--- a/src/pages/Documentation/components/CodeTab/style.scss
+++ b/src/pages/Documentation/components/CodeTab/style.scss
@@ -8,7 +8,7 @@
   margin-bottom: 3px;
   color: white;
   opacity: 0.4;
-  transition: 200ms;
+  transition: opacity 200ms;
 
   @include phone {
     display: inline-block;
